# vision-rag

./: .env.template  Makefile  README.md  Todo.md  pyproject.toml
scripts/: create_collection.py
vision_rag/: main.py
vision_rag/app/api/: dependencies.py  lifespan.py  state.py
vision_rag/app/api/endpoints/: pdf_ingest.py  query.py
vision_rag/lib/muvera/: __init__.py  fde_generator.py
