[project]
name = "vision-rag"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colpali-engine>=0.3.12",
    "fastapi[standard]>=0.116.1",
    "instructor[anthropic]>=1.10.0",
    "loguru>=0.7.3",
    "pdf2image>=1.17.0",
    "pydantic-settings>=2.10.1",
    "qdrant-client>=1.15.0",
    "supabase>=2.17.0",
    "tenacity>=9.1.2",
]
